--- a/about.html
+++ b/about.html
@@ -57,6 +57,10 @@
   /* Fixed background */
 }
 
+body {
+  background: linear-gradient(to right, #FFDAB9, #FF4500);
+}
+
     </style>
 
   </head>
