--- a/about.html
+++ b/about.html
@@ -61,6 +61,73 @@ body {
   background: linear-gradient(to right, #FFDAB9, #FF4500);
 }
 
+
+
+
+
+body {
+  background: linear-gradient(to right, #FFDAB9, #FF4500, #87CEFA, #00008B);
+  /* Changed text color to white */
+  font-family: 'Papyrus', Fantasy;
+  font-weight: bold;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+/* Gradient from light orange (#FFDAB9) to dark orange (#FF4500) */
+body {
+  background: linear-gradient(to right, #FFDAB9, #FF4500);
+}
+color: black;
+padding: 20px;
+text-align: center;
+}
+
+.navbar a {
+  color: black;
+  /* Changed link text color to black */
+  padding: 14px 20px;
+  text-decoration: none; /* Add this line for the black border */
+}
+
+.navbar a:hover {
+  background-color: blue;
+  color: white;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.column h2 {
+  color: black;
+  /* Changed heading color to white */
+}
+
+.column p {
+  color: black;
+  /* Changed paragraph text color to white */
+}
+
+.navbar {
+  text-align: center;
+  padding: 10px 0;
+  border: 1px solid blue;
+  /* Add this line for the black border */
+}
+
+/* CSS to add a border around the body */
+body {
+  border: 12px solid black;
+  /* You can adjust the width and color */
+}
+
     </style>
 
   </head>
