--- a/about.html
+++ b/about.html
@@ -128,6 +128,69 @@ body {
   /* You can adjust the width and color */
 }
 
+
+
+
+
+
+body {
+      font-family: Arial, sans-serif;
+      }
+
+      .navbar {
+        text-align: center;
+        background-color: blue;
+        padding: 10px 0;
+        border: 1px solid blue; /* Add this line for the black border */
+      }
+
+      .navbar a {
+        margin: 0 15px;
+        text-decoration: none;
+        color: black;
+      }
+
+      .navbar a.active {
+        font-weight: bold;
+      }
+
+      .gallery {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        /* Adjust the number of columns as needed */
+        gap: 10px;
+        padding: 20px;
+      }
+
+      .gallery img {
+        width: 90%;
+        /* Adjust the width to make images larger */
+        height: auto;
+      }
+
+body {
+  background-color: #f3e5ab;
+  background-size: cover;
+  /* This ensures the image covers the entire container */
+  background-repeat: no-repeat;
+  /* Prevents image from repeating */
+  background-attachment: fixed;
+  /* Fixed background */
+    font-family: 'Papyrus', Fantasy;
+}
+
+.navbar {
+  text-align: center;
+  background-color: black;
+  padding: 10px 0;
+}
+
+.navbar a {
+  margin: 0 15px;
+  text-decoration: none;
+  color: blue;
+}
+
     </style>
 
   </head>
