--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
 <style>
 
     body {
-    background-color: #f3e5ab;
     background-size: cover;
     /* This ensures the image covers the entire container */
     background-repeat: no-repeat;
@@ -81,58 +80,22 @@ form button {
   background-color: #909090; /* Change to a different color on hover */
 }
 
-.navbar {
-  text-align: center;
-  background-color: black;
-  padding: 10px 0;
-}
-
 .navbar a {
   margin: 0 15px;
   text-decoration: none;
   color: blue;
 }
 
-
-
-
-  body {
-      font-family: Arial, sans-serif;
-      }
-
-      .navbar {
+.navbar {
         text-align: center;
-        background-color: blue;
+        background-color: black;
         padding: 10px 0;
         border: 1px solid blue; /* Add this line for the black border */
       }
 
-      .navbar a {
-        margin: 0 15px;
-        text-decoration: none;
-        color: black;
-      }
-
-      .navbar a.active {
-        font-weight: bold;
-      }
-
-      .gallery {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        /* Adjust the number of columns as needed */
-        gap: 10px;
-        padding: 20px;
-      }
-
-      .gallery img {
-        width: 90%;
-        /* Adjust the width to make images larger */
-        height: auto;
-      }
 
 body {
-  background-color: #f3e5ab;
+    background: linear-gradient(to right, #FFDAB9, #FF4500, #87CEFA, #00008B, black);
   background-size: cover;
   /* This ensures the image covers the entire container */
   background-repeat: no-repeat;
@@ -140,18 +103,6 @@ body {
   background-attachment: fixed;
   /* Fixed background */
     font-family: 'Papyrus', Fantasy;
-}
-
-.navbar {
-  text-align: center;
-  background-color: black;
-  padding: 10px 0;
-}
-
-.navbar a {
-  margin: 0 15px;
-  text-decoration: none;
-  color: blue;
 }
 
 
