--- a/about.html
+++ b/about.html
@@ -47,9 +47,7 @@
       }
 
       body {
-  background-color: #f3e5ab;
-  background-size: cover;
-  /* This ensures the image covers the entire container */
+  background: linear-gradient(to right, #FFDAB9, #FF4500, #87CEFA, #00008B, black);
   background-repeat: no-repeat;
   /* Prevents image from repeating */
   background-attachment: fixed;
